fix consistent spacing styling

--- a/src/application/components/operation.css
+++ b/src/application/components/operation.css
@@ -16,10 +16,6 @@
   padding: 1rem 0;
 }
 
-.request {
-  padding: 0 0 2rem;
-}
-
 .link {
   color: inherit;
   text-decoration: none;
