--- a/src/application/components/request.css
+++ b/src/application/components/request.css
@@ -1,14 +1,8 @@
 @import "variables.css";
 
-.name {
-  font-weight: 400;
-  margin: 0 0 0.5rem 0;
-  font-size: 1.5rem;
-  line-height: 1;
-}
-
 .container {
   padding: 0 1rem 1rem 1rem;
+  margin: 0 0 1rem 0;
   border: 2px solid var(--color-concrete);
   border-bottom-right-radius: var(--border-radius);
   border-bottom-left-radius: var(--border-radius);
