--- a/src/application/components/response.css
+++ b/src/application/components/response.css
@@ -1,7 +1,7 @@
 @import "variables.css";
 
 .container {
-  margin: 0 0 0.75rem;
+  margin: 0 0 1rem 0;
   padding: 0 0 1rem 1rem;
   border: 2px solid var(--color-concrete);
   border-bottom-right-radius: var(--border-radius);
